feat: melhorando a integração com .env e dockerfile